// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot Checkbox 1`] = `
[
  <style
    dangerouslySetInnerHTML={
      {
        "__html": ".css-1j4k4u4{display:inline-block;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;width:22px;height:22px;background-color:transparent;border:2px solid #585292;border-radius:3px;cursor:pointer;color:transparent;font-weight:bold;line-height:22px;text-align:center;}",
      }
    }
    data-emotion="css 1j4k4u4"
  />,
  <div
    checked={false}
    className="css-1j4k4u4"
  >
    X
  </div>,
]
`;

exports[`snapshot Container 1`] = `
[
  <style
    dangerouslySetInnerHTML={
      {
        "__html": ".css-1cjri8q{background-color:#f5f5f5;min-height:100vh;}@media (min-width: 1024px){.css-1cjri8q{max-width:768px;margin:3rem auto;border-radius:1rem;min-height:unset;}}",
      }
    }
    data-emotion="css 1cjri8q"
  />,
  <div
    className="css-1cjri8q"
  >
    X
  </div>,
]
`;

exports[`snapshot TodoInput 1`] = `
[
  <style
    dangerouslySetInnerHTML={
      {
        "__html": ".css-gzr0dl{width:100%;border:none;}.css-gzr0dl:focus{outline:none;box-shadow:none;}.css-gzr0dl::-webkit-input-placeholder{color:#bcbcbc;}.css-gzr0dl::-moz-placeholder{color:#bcbcbc;}.css-gzr0dl:-ms-input-placeholder{color:#bcbcbc;}.css-gzr0dl::placeholder{color:#bcbcbc;}",
      }
    }
    data-emotion="css gzr0dl"
  />,
  <input
    className="css-gzr0dl"
  />,
]
`;

exports[`snapshot TodoItemContainer 1`] = `
[
  <style
    dangerouslySetInnerHTML={
      {
        "__html": ".css-11rgiw7{background-color:#fff;padding:0.5rem 1rem;box-sizing:border-box;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:justify;-webkit-justify-content:space-between;justify-content:space-between;height:46px;border-radius:99rem;-webkit-column-gap:1rem;column-gap:1rem;}",
      }
    }
    data-emotion="css 11rgiw7"
  />,
  <div
    className="css-11rgiw7"
  />,
]
`;
